v6.9
-----
+ Added a "Customize" button the the "All New Releases" section
: Fixed a bug with Euro price formatting
: Fixed a bug that caused some packages not to process savings calculations corectly (again)
: Fixed several bugs with the home page customization button


v6.8
-----
+ Completely re-wrote how Enhanced Steam handles highlighting to be faster and more accurate
+ Added a "Customize" button to app pages that lets you decide which sections to display
+ Added a "Customize" button to the home page that lets you decide which sections to display
+ Added "Rewards from Playfire" to applicable app pages (thanks mouse0270!)
+ Added an "All New Releases" tab to Steam home page
: Fixed a memory leak caused by continous scrolling function in some instances
: Fixed account total spent feature to work with the new account page design
: Fixed a bug that caused coupon discounts to not display properly on app pages
: Fixed the placement of regional price comparison box on sale pages
: Fixed the spacing of the "Popular" tab on the home page
: Fixed a bug that caused some packages not to process savings calculations corectly
: Fixed a bug where DLC checkboxes would behave incorrectly if the DLC had no subID
: Fixed a bug that caused incorrect image opacity on items when highlighting was disabled
: Updated DLC pages to work with the new store layout including the "add all unowned" button
- Removed cart buttons on wishlist page due to changes made by Valve

v6.7.1
-----
+ Added WSGF 4k grading to applicable games
+ Added tooltips on review scores to subsequent results on continuous scrolling feature
: Fixed a bug where homepage carousel items didn't load correctly before being cachced
: Fixed a bug that caused search results not to display Early Access banners
: Updated 3rd Party DRM warning to more closely resemble the original design
: Fixed a bug that caused regional price comparisons on sub pages to be incorrectly positioned